--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -63,8 +63,11 @@ app:
   # Enable a public endpoint for the application. If not set, the application
   # is only available on an internal endpoint accessible to other applications
   # within a subscription.
-  endpoints: public
+  #endpoints: public
+  #To use a VPE to access your application with a private endpoint, you must enable endpoint connectivity 
+  endpoints: vpe
 
+  
   # Set the Java runtime version for the application. Set to 8 for IBM Java 8,
   # 17 for IBM Semeru 17, or 21 for IBM Semeru 21. If not set, the service
   # tries to automatically detect the Java version for the application. If the
